   the list of already deprecated names.

 - ECL builds using thread local storage when configured with --with-__thread and
   the feature works on that platform.

 - Functions compiled with (OPTIMIZE (SAFETY >= 2)) have an explicit stack
   overflow check.

 - Binary streams now can only read or write bytes whose size is a multiple of 8.

* Streams:

 - ECL has now a new and more easily extensible implementation of streams, based
   on C structures with a method dispatch table. Apart from code reuse and better
   maintainability, this allows a more sensible design of read/write-sequence.

 - *STANDARD-INPUT*, *{STANDARD,ERROR,TRACE}-OUTPUT* are no longer synonyms to
   *TERMINAL-IO* but directly the input or output streams associated to stdin,
   stdout and stderr.

 - Internally, ECL allows to work with POSIX file descriptors directly, without
   using C streams.

 - POSIX files and C streams now support different external formats. ECL
   understands right now :UTF-8, :UCS-2 (bigendian), :UCS-4 (bigendian),
   :LATIN-1 and :ISO-8859-1. If built _without_ support for Unicode, only the
   last two are available.

 - Readtables now include entries for extended characters.

 - When a string is read, if the characters are base-char, the string is read
   as a base-string.

* Embedding:

 - ECL now implements a more transparent interface for setting and querying
   options related to signal trapping, stack sizes and general behavior. These
   are options that should be set before calling cl_boot() to customize later
   behavior. It does not make sense to change them at run time. The current
   list of options is set with ecl_set_option(code, value) and queried with
   ecl_get_option(code):
	ECL_OPT_INCREMENTAL_GC,
	ECL_OPT_TRAP_SIGSEGV,
	ECL_OPT_TRAP_SIGFPE,
	ECL_OPT_TRAP_SIGINT,
	ECL_OPT_TRAP_SIGILL,
	ECL_OPT_TRAP_SIGBUS,
	ECL_OPT_BOOTED, /* read only */
	ECL_OPT_BIND_STACK_SIZE,
	ECL_OPT_BIND_STACK_SAFETY_AREA,
	ECL_OPT_FRAME_STACK_SIZE,